# llm-lab

./: .gitignore  ML_Part_1.ipynb  Prompts.ipynb  Untitled0.ipynb
01-langchain/: Untitled0.ipynb  Untitled2.ipynb  langSmith.ipynb
02-GenAI/: main.py  pyproject.toml  requirements.txt
02-GenAI/Cinesage/: CinesageUI.py  core.py
02-GenAI/chatmodels/: chatbot.py  chatbotUI.py  localmodel.py  parallelrunnable.py
03-RagChatBot/: app.py  main.py  pyproject.toml  requirements.txt
03-RagChatBot/chroma_db/: chroma.sqlite3
03-RagChatBot/notebooks/: database_loader.ipynb
