[project]
name = "02-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.6",
    "langgraph>=1.2.8",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.59.1",
    "tiktoken>=0.13.0",
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.28.0",
    "transformers>=5.13.0",
    "uvicorn>=0.51.0",
]
